fix: about nav visible on focus

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -435,6 +435,7 @@ footer {
             margin-top: .45rem;
         }
 
+        ul:focus-within,
         input:checked ~ ul {
             clip-path: inset(-7px 0 0 0);
         }
